feat: add tests

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -5,16 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Formalin Fixation, Paraffin Embedding Protocol\n",
+    "# Testing the Protocol timer\n",
     "\n",
-    "**Pranav Kumar Mishra**  \n",
-    "Department of Surgery and Orthopedic Surgery  \n",
-    "Laboratories of Alfonso Torquati and Anna Spagnoli  \n",
-    "Rush University, Chicago, IL, USA  \n",
-    "\n",
-    "**Overview**\n",
-    "\n",
-    "This is a protocol for preparing surgical specimens for histological experiments, including spatial transcriptomics, using **formalin fixed, paraffin embedded** sections.\n"
+    "This is the protocol timer base. It uses a `.csv` source file to dynamically build a protocol. The steps are then sent to a self-hosted Matrix-based chatroom (closed source alternative: Discord) using an HTTP webhook. The protocol can be sequentially automatically by using the `Excecute cell and below` button on VSCode. If you need time to prepare between steps, you can use the `Execute Cell` button to start the timer for only a single step, advancing one step at a time."
    ]
   },
   {
@@ -65,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the working directory based on local or github\n",
     "def get_git_root():\n",
     "    import subprocess\n",
     "    try:\n",
@@ -72,10 +66,16 @@
     "        return git_root.strip().decode('utf-8')\n",
     "    except subprocess.CalledProcessError:\n",
     "        return None\n",
+    "    \n",
+    "if os.getenv(\"GITHUB_WORKSPACE\"): \n",
+    "\tworkspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
+    "\tos.chdir(workspace_dir)\n",
+    "\tprint(f\"Changed directory to {os.getcwd()}\")\n",
     "\n",
-    "root_dir = get_git_root()\n",
-    "print(root_dir)\n",
-    "os.chdir(root_dir)"
+    "else:\n",
+    "\troot_dir = get_git_root()\n",
+    "\tprint(root_dir)\n",
+    "\tos.chdir(root_dir)"
    ]
   },
   {
@@ -84,6 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the webhooks from a secrets file or from environment variables\n",
     "if os.getenv(\"TEST_WEBHOOK\"):\n",
     "\tprint(\"Using the test webhook\")\n",
     "\tmatrix_webhook_url = os.getenv(\"TEST_WEBHOOK\")\n",
@@ -105,22 +106,8 @@
     "\n",
     "else:\n",
     "\tprint(\"Error, no webhooks set\")\n",
-    "\tprint(variable)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.getenv(\"GITHUB_WORKSPACE\"): \n",
-    "\tworkspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
-    "\tos.chdir(workspace_dir)\n",
-    "\tprint(f\"Changed directory to {os.getcwd()}\")\n",
-    "\n",
-    "else:\n",
-    "\tprint(f\"Did not change directory. The current directory is {os.getcwd()}\")"
+    "\timport sys\n",
+    "\tsys.exit(1)"
    ]
   },
   {
@@ -364,6 +351,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -376,7 +364,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protocol_csv_path = 'protocols/histology/FFPE.csv'"
+    "protocol_csv_path = './test/test.csv' #'./histology/FFPE.csv' \n",
+    "\n",
+    "\n",
+    "# Show the HTML Description file loaded\n",
+    "html_description = get_protocol_description(protocol_csv_path)\n",
+    "print(html_description)"
    ]
   },
   {
@@ -385,10 +378,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show the HTML Description file loaded\n",
-    "html_description = get_protocol_description(protocol_csv_path)\n",
-    "\n",
-    "\n",
     "df = pd.read_csv(protocol_csv_path)\n",
     "\n",
     "#flip the dataframe since a new \"step\" is always inserted immediately after the currently running one (new cells end up in reverse order)\n",
@@ -427,12 +416,57 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Protocol\n",
+    "## Your Protocol\n",
+    "**Instructions**\n",
+    "A cell has been created for each step of your protocol according to the durations specified. When you \"run\" a cell, a progress bar will appear, with a timer for the elapsed time and a time remaining countdown.\n",
     "\n",
-    "When you are ready to begin, run all of the cells below (or one by one)"
+    "After the timer runs out, a completed message will be displayed.\n",
+    "\n",
+    "### Run the next cell *once*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Start the protocol\n",
+       "**When you are ready to begin, run the cell below**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
+    "\n",
+    "# create_new_cell('send_matrix_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ---- <br><hr>\")')\n",
+    "\n",
+    "# for row in df.index:\n",
+    "#     all_in_one = step_commands(df, row)\n",
+    "    \n",
+    "#     create_new_cell(all_in_one)\n",
+    "\n",
+    "# display(Markdown('## Start the protocol\\n**When you are ready to begin, run the cell below**'))\n",
+    "\n",
+    "# create_new_cell('send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")')\n",
+    "\n",
+    "# create_new_cell('send_matrix_message(f\"{html_description}\")')\n",
+    "\n",
+    "# create_new_cell('send_matrix_message(clear_chat_page)')\n",
+    "\n",
+    "# create_new_cell(\"#------ Click here, then run all of the cells below ------#\")"
    ]
   },
   {
@@ -477,118 +511,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 1: 70% Ethanol (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 2: 80% Ethanol (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 3: 95% Ethanol - 1 (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[11], df.Combined.iloc[11], df.Duration.iloc[11])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 4: 95% Ethanol - 2 (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[10], df.Combined.iloc[10], df.Duration.iloc[10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 5: 100% Ethanol - 1 (0:45:00)**') \n",
-    "print('Duration is 45.0 minutes') \n",
-    "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 6: 100% Ethanol - 2 (0:50:00)**') \n",
-    "print('Duration is 50.0 minutes') \n",
-    "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 7: 100% Ethanol - 3 (1:00:00)**') \n",
-    "print('Duration is 60.0 minutes') \n",
-    "countdown(df.Duration.iloc[7], df.Combined.iloc[7], df.Duration.iloc[7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 8: Xylene - 1 (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[6], df.Combined.iloc[6], df.Duration.iloc[6])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 9: Xylene - 2 (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[5], df.Combined.iloc[5], df.Duration.iloc[5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 10: Xylene - 3 (0:40:00)**') \n",
-    "print('Duration is 40.0 minutes') \n",
-    "countdown(df.Duration.iloc[4], df.Combined.iloc[4], df.Duration.iloc[4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 11: Xylene - 4 (1:00:00)**') \n",
-    "print('Duration is 60.0 minutes') \n",
+    "print('**Step 1: 75% Ethanol (0:00:05)**') \n",
+    "print('Duration is 0.083 minutes') \n",
     "countdown(df.Duration.iloc[3], df.Combined.iloc[3], df.Duration.iloc[3])"
    ]
   },
@@ -598,8 +522,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 12: Paraffin - 1 (0:30:00)**') \n",
-    "print('Duration is 30.0 minutes') \n",
+    "print('**Step 2: 80% Ethanol (0:00:05)**') \n",
+    "print('Duration is 0.083 minutes') \n",
     "countdown(df.Duration.iloc[2], df.Combined.iloc[2], df.Duration.iloc[2])"
    ]
   },
@@ -609,8 +533,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 13: Paraffin - 2 (1:00:00)**') \n",
-    "print('Duration is 60.0 minutes') \n",
+    "print('**Step 3: 95% Ethanol - 1 (0:00:05)**') \n",
+    "print('Duration is 0.083 minutes') \n",
     "countdown(df.Duration.iloc[1], df.Combined.iloc[1], df.Duration.iloc[1])"
    ]
   },
@@ -620,8 +544,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 14: Paraffin - 3 (1:30:00)**') \n",
-    "print('Duration is 90.0 minutes') \n",
+    "print('**Step 4: 95% Ethanol - 2 (0:00:05)**') \n",
+    "print('Duration is 0.083 minutes') \n",
     "countdown(df.Duration.iloc[0], df.Combined.iloc[0], df.Duration.iloc[0])"
    ]
   },
