fix: papermill and github action directories

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -62,20 +62,24 @@
     "def get_git_root():\n",
     "    import subprocess\n",
     "    try:\n",
+    "        # Set the directory as safe\n",
+    "        subprocess.check_call(['git', 'config', '--global', '--add', 'safe.directory', \"/home/coder/work\"])\n",
+    "        \n",
     "        git_root = subprocess.check_output(['git', 'rev-parse', '--show-toplevel'], stderr=subprocess.STDOUT)\n",
     "        return git_root.strip().decode('utf-8')\n",
     "    except subprocess.CalledProcessError:\n",
     "        return None\n",
     "    \n",
     "if os.getenv(\"GITHUB_WORKSPACE\"): \n",
-    "\tworkspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
-    "\tos.chdir(workspace_dir)\n",
-    "\tprint(f\"Changed directory to {os.getcwd()}\")\n",
+    "    workspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
+    "    os.chdir(workspace_dir)\n",
+    "    print(f\"Changed directory to {os.getcwd()}\")\n",
     "\n",
     "else:\n",
-    "\troot_dir = get_git_root()\n",
-    "\tprint(root_dir)\n",
-    "\tos.chdir(root_dir)"
+    "    root_dir = get_git_root()\n",
+    "    os.chdir(root_dir)\n",
+    "\n",
+    "print(f\"Current Directory: {os.getcwd()}\")"
    ]
   },
   {
