feat: create test tokens file and job summary

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -93,10 +93,10 @@
     "\tprint(\"Using the test webhook\")\n",
     "\tmatrix_webhook_url = os.getenv(\"TEST_WEBHOOK\")\n",
     "\n",
-    "elif os.path.exists(f\"{root_dir}/protocols/token.secrets\"):\n",
+    "elif os.path.exists(f\"{root_dir}/protocols/test-tokens.secrets\"):\n",
     "\tprint('Reading from token.secrets')\n",
     "\tparser = ConfigParser()\n",
-    "\t_ = parser.read(f'{root_dir}/protocols/token.secrets')\n",
+    "\t_ = parser.read(f'{root_dir}/protocols/test-tokens.secrets')\n",
     "\tchannel_id = parser.get('discord', 'channel_id')\n",
     "\twebhook_url = parser.get('discord', 'webhook')\n",
     "\tmatrix_webhook_url = parser.get('matrix', 'webhook')\n",
