feat: revert to self-hosted webhooks testing

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -120,6 +120,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(matrix_webhook_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adjust for timezone\n",
     "\n",
     "# America/Chicago == -6; -5 during DST\n",
