fix: improve NaN handling in the text of the "combined" message

--- a/protocols/histology/Deparaffinization.ipynb
+++ b/protocols/histology/Deparaffinization.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 16: PBS - 3 (0:05:00)&lt;br&gt;Description: Roo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -447,7 +447,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 15: PBS - 2 (0:05:00)&lt;br&gt;Description: Roo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -456,7 +456,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 14: PBS - 1 (0:05:00)&lt;br&gt;Description: Roo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -465,7 +465,7 @@
        "      <td>0:20:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>Tissue permeabilization</td>\n",
-       "      <td>Step 13: 0.1% Triton X-100 in PBS (0:20:00) &lt;b...</td>\n",
+       "      <td>Step 13: 0.1% Triton X-100 in PBS (0:20:00)&lt;br...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -474,7 +474,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 12: PBS - 3 (0:05:00)&lt;br&gt;Description: Roo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -483,7 +483,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 11: PBS - 2 (0:05:00)&lt;br&gt;Description: Roo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -492,7 +492,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 10: PBS - 1 (0:05:00)&lt;br&gt;Description: Roo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -501,7 +501,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 9: 50% Ethanol (0:05:00)&lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -510,7 +510,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 8: 75% Ethanol (0:05:00)&lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -519,7 +519,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 7: 95% Ethanol (0:05:00)&lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -528,7 +528,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 6: 100% Ethanol - 2 (0:05:00)&lt;br&gt;Descript...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -537,7 +537,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 5: 100% Ethanol - 1 (0:05:00)&lt;br&gt;Descript...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -546,7 +546,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 4: 50% Xylene / 50% Ethanol (0:05:00)&lt;br&gt;...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -555,7 +555,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 3: Xylene (0:05:00)&lt;br&gt;Description: Room ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -564,7 +564,7 @@
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 2: Xylene (0:05:00)&lt;br&gt;Description: Room ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -573,7 +573,7 @@
        "      <td>1:00:00</td>\n",
        "      <td>50C</td>\n",
        "      <td>Can remain in the vacuum oven for up to 5 hours</td>\n",
-       "      <td>Step 1: Vacuum oven (1:00:00) &lt;br&gt;Description:...</td>\n",
+       "      <td>Step 1: Vacuum oven (1:00:00)&lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -582,7 +582,7 @@
        "      <td>0:00:00</td>\n",
        "      <td>Immunofluorescence protocol - paraffin sections</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 0: Protocol created by Michael Kluppel (0...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -647,23 +647,23 @@
        "16                                             <NA>   \n",
        "\n",
        "                                             Combined  \n",
-       "0                                                <NA>  \n",
-       "1                                                <NA>  \n",
-       "2                                                <NA>  \n",
-       "3   Step 13: 0.1% Triton X-100 in PBS (0:20:00) <b...  \n",
-       "4                                                <NA>  \n",
-       "5                                                <NA>  \n",
-       "6                                                <NA>  \n",
-       "7                                                <NA>  \n",
-       "8                                                <NA>  \n",
-       "9                                                <NA>  \n",
-       "10                                               <NA>  \n",
-       "11                                               <NA>  \n",
-       "12                                               <NA>  \n",
-       "13                                               <NA>  \n",
-       "14                                               <NA>  \n",
-       "15  Step 1: Vacuum oven (1:00:00) <br>Description:...  \n",
-       "16                                               <NA>  "
+       "0   Step 16: PBS - 3 (0:05:00)<br>Description: Roo...  \n",
+       "1   Step 15: PBS - 2 (0:05:00)<br>Description: Roo...  \n",
+       "2   Step 14: PBS - 1 (0:05:00)<br>Description: Roo...  \n",
+       "3   Step 13: 0.1% Triton X-100 in PBS (0:20:00)<br...  \n",
+       "4   Step 12: PBS - 3 (0:05:00)<br>Description: Roo...  \n",
+       "5   Step 11: PBS - 2 (0:05:00)<br>Description: Roo...  \n",
+       "6   Step 10: PBS - 1 (0:05:00)<br>Description: Roo...  \n",
+       "7   Step 9: 50% Ethanol (0:05:00)<br>Description: ...  \n",
+       "8   Step 8: 75% Ethanol (0:05:00)<br>Description: ...  \n",
+       "9   Step 7: 95% Ethanol (0:05:00)<br>Description: ...  \n",
+       "10  Step 6: 100% Ethanol - 2 (0:05:00)<br>Descript...  \n",
+       "11  Step 5: 100% Ethanol - 1 (0:05:00)<br>Descript...  \n",
+       "12  Step 4: 50% Xylene / 50% Ethanol (0:05:00)<br>...  \n",
+       "13  Step 3: Xylene (0:05:00)<br>Description: Room ...  \n",
+       "14  Step 2: Xylene (0:05:00)<br>Description: Room ...  \n",
+       "15  Step 1: Vacuum oven (1:00:00)<br>Description: ...  \n",
+       "16  Step 0: Protocol created by Michael Kluppel (0...  "
       ]
      },
      "metadata": {},
@@ -684,6 +684,7 @@
     "    + \"<br>Comment: \" + df['Comment'].fillna('')\n",
     ")\n",
     "\n",
+    "\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
     "\n",
     "display(df)"
@@ -691,13 +692,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Total time to complete the protocol: 2h:30m:0s.<br>Expected time of completion: Monday at 10:03 PM"
+       "Total time to complete the protocol: 2h:30m:0s.<br>Expected time of completion: Monday at 10:22 PM"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 0: Protocol created by Michael Kluppel (0:00:00)<br>Description: Immunofluorescence protocol - paraffin sections<br>Comment: **') \n",
     "print('Duration is 0.0 minutes') \n",
     "countdown(df.Duration.iloc[16], df.Combined.iloc[16], df.Duration.iloc[16])"
    ]
@@ -833,7 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 1: Vacuum oven (1:00:00) <br>Description: 50C <br>Comment: Can remain in the vacuum oven for up to 5 hours**') \n",
+    "print('**Step 1: Vacuum oven (1:00:00)<br>Description: 50C<br>Comment: Can remain in the vacuum oven for up to 5 hours**') \n",
     "print('Duration is 60.0 minutes') \n",
     "countdown(df.Duration.iloc[15], df.Combined.iloc[15], df.Duration.iloc[15])"
    ]
@@ -844,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 2: Xylene (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[14], df.Combined.iloc[14], df.Duration.iloc[14])"
    ]
@@ -855,18 +856,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 3: Xylene (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[13], df.Combined.iloc[13], df.Duration.iloc[13])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Step 4: 50% Xylene / 50% Ethanol (0:05:00)<br>Description: Room Temperature<br>Comment: **\n",
+      "Duration is 5.0 minutes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Starting Step 4: 50% Xylene / 50% Ethanol (0:05:00)<br>Description: Room Temperature<br>Comment: '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f12caeb54c14bb2aad95a76acdfd356",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "     0% [Elapsed: 00:00 -- Remaining: ?]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
    ]
@@ -877,7 +917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 5: 100% Ethanol - 1 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[11], df.Combined.iloc[11], df.Duration.iloc[11])"
    ]
@@ -888,7 +928,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 6: 100% Ethanol - 2 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[10], df.Combined.iloc[10], df.Duration.iloc[10])"
    ]
@@ -899,7 +939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 7: 95% Ethanol (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
    ]
@@ -910,7 +950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 8: 75% Ethanol (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
    ]
@@ -921,7 +961,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 9: 50% Ethanol (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[7], df.Combined.iloc[7], df.Duration.iloc[7])"
    ]
@@ -932,7 +972,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 10: PBS - 1 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[6], df.Combined.iloc[6], df.Duration.iloc[6])"
    ]
@@ -943,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 11: PBS - 2 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[5], df.Combined.iloc[5], df.Duration.iloc[5])"
    ]
@@ -954,7 +994,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 12: PBS - 3 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[4], df.Combined.iloc[4], df.Duration.iloc[4])"
    ]
@@ -965,7 +1005,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 13: 0.1% Triton X-100 in PBS (0:20:00) <br>Description: Room Temperature <br>Comment: Tissue permeabilization**') \n",
+    "print('**Step 13: 0.1% Triton X-100 in PBS (0:20:00)<br>Description: Room Temperature<br>Comment: Tissue permeabilization**') \n",
     "print('Duration is 20.0 minutes') \n",
     "countdown(df.Duration.iloc[3], df.Combined.iloc[3], df.Duration.iloc[3])"
    ]
@@ -976,7 +1016,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 14: PBS - 1 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[2], df.Combined.iloc[2], df.Duration.iloc[2])"
    ]
@@ -987,7 +1027,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 15: PBS - 2 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[1], df.Combined.iloc[1], df.Duration.iloc[1])"
    ]
@@ -998,7 +1038,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**<NA>**') \n",
+    "print('**Step 16: PBS - 3 (0:05:00)<br>Description: Room Temperature<br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[0], df.Combined.iloc[0], df.Duration.iloc[0])"
    ]
