--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -395,7 +395,12 @@
     "df = df.iloc[::-1].reset_index()\n",
     "df.drop(columns='index', inplace=True)\n",
     "\n",
-    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \") <br>Description: \" + df['Description'] + \" <br>Comment: \" + df['Comment']\n",
+    "df['Combined'] = (\n",
+    "    \"Step \" + df['Step Number'].fillna('').astype(str) + \": \" \n",
+    "    + df['Step Text'].fillna('') + \" (\" + df['Duration'].fillna('').astype(str) + \")\"\n",
+    "    + \"<br>Description: \" + df['Description'].fillna('') \n",
+    "    + \"<br>Comment: \" + df['Comment'].fillna('')\n",
+    ")\n",
     "\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
     "\n",
