--- a/protocols/histology/deparaffinization.ipynb
+++ b/protocols/histology/deparaffinization.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,65 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the working directory based on local or github\n",
-    "def get_git_root():\n",
-    "    import subprocess\n",
-    "    try:\n",
-    "        git_root = subprocess.check_output(['git', 'rev-parse', '--show-toplevel'], stderr=subprocess.STDOUT)\n",
-    "        return git_root.strip().decode('utf-8')\n",
-    "    except subprocess.CalledProcessError:\n",
-    "        return None\n",
-    "    \n",
-    "if os.getenv(\"GITHUB_WORKSPACE\"): \n",
-    "\tworkspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
-    "\tos.chdir(workspace_dir)\n",
-    "\tprint(f\"Changed directory to {os.getcwd()}\")\n",
+    "parser = ConfigParser()\n",
     "\n",
-    "else:\n",
-    "\troot_dir = get_git_root()\n",
-    "\tprint(root_dir)\n",
-    "\tos.chdir(root_dir)"
+    "_ = parser.read('token.secrets')\n",
+    "\n",
+    "channel_id = parser.get('discord', 'channel_id')\n",
+    "\n",
+    "webhook_url = parser.get('discord', 'webhook')\n",
+    "\n",
+    "matrix_webhook_url = parser.get('matrix', 'webhook')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the webhooks from a secrets file or from environment variables\n",
-    "if os.getenv(\"TEST_WEBHOOK\"):\n",
-    "\tprint(\"Using the test webhook\")\n",
-    "\tmatrix_webhook_url = os.getenv(\"TEST_WEBHOOK\")\n",
-    "\n",
-    "elif os.path.exists(f\"{root_dir}/protocols/token.secrets\"):\n",
-    "\tprint('Reading from token.secrets')\n",
-    "\tparser = ConfigParser()\n",
-    "\t_ = parser.read(f'{root_dir}/protocols/token.secrets')\n",
-    "\tchannel_id = parser.get('discord', 'channel_id')\n",
-    "\twebhook_url = parser.get('discord', 'webhook')\n",
-    "\tmatrix_webhook_url = parser.get('matrix', 'webhook')\n",
-    "\n",
-    "elif os.getenv(\"MATRIX_WEBHOOK\"):\n",
-    "\tmatrix_webhook_url = os.getenv(\"MATRIX_WEBHOOK\")\n",
-    "\n",
-    "elif os.getenv(\"DISCORD_WEBHOOK\"):\n",
-    "\tchannel_id = os.getenv(\"CHANNEL_ID\")\n",
-    "\twebhook_url = os.getenv(\"DISCORD_WEBHOOK\")\n",
-    "\n",
-    "else:\n",
-    "\tprint(\"Error, no webhooks set\")\n",
-    "\timport sys\n",
-    "\tsys.exit(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -360,11 +319,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h1>Deparaffinization Protocol</h1> <p><strong>Pranav Kumar Mishra</strong><br /> Department of Surgery and Orthopedic Surgery<br /> Laboratories of Alfonso Torquati and Anna Spagnoli<br /> Rush University, Chicago, IL, USA </p> <h2>Overview</h2> <p>This is a protocol for preparing slides using a formalin fixed, paraffin embedded (FFPE) section. These slides will be used for various protocols, including:</p> <ul> <li>Hematoxylin and Eosin</li> <li>Immunohistochemistry</li> <li>Spatial Transcriptomics</li> </ul>\n"
+     ]
+    }
+   ],
    "source": [
-    "protocol_csv_path = './protocols/histology/Deparaffinization.csv' #'./histology/FFPE.csv' \n",
+    "protocol_csv_path = './histology/Deparaffinization.csv' #'./histology/FFPE.csv' \n",
     "\n",
     "\n",
     "# Show the HTML Description file loaded\n",
@@ -374,9 +341,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Step Number</th>\n",
+       "      <th>Step Text</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Combined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>50% Ethanol</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 9: 50% Ethanol (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>75% Ethanol</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 8: 75% Ethanol (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>95% Ethanol</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 7: 95% Ethanol (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>100% Ethanol - 2</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 6: 100% Ethanol - 2 (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>100% Ethanol - 1</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 5: 100% Ethanol - 1 (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>50% Xylene / 50% Ethanol</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 4: 50% Xylene / 50% Ethanol (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Xylene - 2</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 3: Xylene - 2 (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Xylene - 1</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 2: Xylene - 1 (0:05:00)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Melt paraffin in oven</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>60C</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 1: Melt paraffin in oven (1:00:00)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Step Number                 Step Text Duration       Description Comment  \\\n",
+       "0            9               50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "1            8               75% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "2            7               95% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "3            6          100% Ethanol - 2  0:05:00  Room Temperature    <NA>   \n",
+       "4            5          100% Ethanol - 1  0:05:00  Room Temperature    <NA>   \n",
+       "5            4  50% Xylene / 50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "6            3                Xylene - 2  0:05:00  Room Temperature    <NA>   \n",
+       "7            2                Xylene - 1  0:05:00  Room Temperature    <NA>   \n",
+       "8            1     Melt paraffin in oven  1:00:00               60C    <NA>   \n",
+       "\n",
+       "                                     Combined  \n",
+       "0               Step 9: 50% Ethanol (0:05:00)  \n",
+       "1               Step 8: 75% Ethanol (0:05:00)  \n",
+       "2               Step 7: 95% Ethanol (0:05:00)  \n",
+       "3          Step 6: 100% Ethanol - 2 (0:05:00)  \n",
+       "4          Step 5: 100% Ethanol - 1 (0:05:00)  \n",
+       "5  Step 4: 50% Xylene / 50% Ethanol (0:05:00)  \n",
+       "6                Step 3: Xylene - 2 (0:05:00)  \n",
+       "7                Step 2: Xylene - 1 (0:05:00)  \n",
+       "8     Step 1: Melt paraffin in oven (1:00:00)  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df = pd.read_csv(protocol_csv_path)\n",
     "\n",
@@ -384,7 +494,7 @@
     "df = df.iloc[::-1].reset_index()\n",
     "df.drop(columns='index', inplace=True)\n",
     "\n",
-    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \") <br>Description: \" + df['Description'] + \" <br>Comment: \" + df['Comment']\n",
+    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \")\"\n",
     "\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
     "\n",
@@ -393,9 +503,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Total time to complete the protocol: 1h:40m:0s.<br>Expected time of completion: Saturday at 09:19 PM"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Calculate the total time and expected time of completion for the protocol\n",
     "\n",
@@ -431,9 +554,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Start the protocol\n",
+       "**When you are ready to begin, run the cell below**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
     "\n",
@@ -466,27 +603,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    }
+   ],
    "source": [
     "send_matrix_message(clear_chat_page)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    }
+   ],
    "source": [
     "send_matrix_message(f\"{html_description}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    }
+   ],
    "source": [
     "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
    ]
@@ -497,96 +658,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 0: Protocol created by Michael Kluppel (0:00:00)**') \n",
-    "print('Duration is 0.0 minutes') \n",
-    "countdown(df.Duration.iloc[16], df.Combined.iloc[16], df.Duration.iloc[16])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print('**Step 1: Melt paraffin in oven (1:00:00)**') \n",
     "print('Duration is 60.0 minutes') \n",
-    "countdown(df.Duration.iloc[15], df.Combined.iloc[15], df.Duration.iloc[15])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 2: Xylene (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[14], df.Combined.iloc[14], df.Duration.iloc[14])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 3: Xylene (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[13], df.Combined.iloc[13], df.Duration.iloc[13])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 5: 100% Ethanol - 1 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[11], df.Combined.iloc[11], df.Duration.iloc[11])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 6: 100% Ethanol - 2 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[10], df.Combined.iloc[10], df.Duration.iloc[10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 7: 95% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 8: 75% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
    ]
   },
